# minimo

./: .gitattributes  README.md  chat.py  export_merged.py  main.py  minimo_tokenizer.json  model.py  pyproject.toml  rag.py  test_speed.py  tokenizer_builder.py  tokenizer_corpus.txt  train.py  vlm.py
checkpoints/: minimo_base.pt
checkpoints/dpo_adapter/: adapter_config.json  adapter_model.safetensors
checkpoints/hf_dpo_adapter/: README.md  adapter_model.safetensors
checkpoints/hf_sft_adapter/: adapter_config.json  adapter_model.safetensors
checkpoints/sft_adapter/: adapter_config.json  adapter_model.safetensors
chroma_db/: chroma.sqlite3
hf_minimo/: config.json
hf_minimo_merged/: config.json  model.safetensors  tokenizer_config.json
