[project]
name = "minimo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "chromadb>=1.5.7",
    "datasets>=4.8.4",
    "einops>=0.8.2",
    "huggingface-hub>=1.9.2",
    "llama-index>=0.14.20",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-vector-stores-chroma>=0.5.5",
    "markitdown>=0.1.5",
    "ocrmypdf>=17.4.1",
    "peft>=0.18.1",
    "sentence-transformers>=5.3.0",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "trl>=1.0.0",
]
