[project]
name = "minimo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate",
    "bitsandbytes",
    "chromadb",
    "datasets",
    "einops",
    "huggingface-hub",
    "llama-index",
    "llama-index-embeddings-huggingface",
    "llama-index-llms-huggingface>=0.7.0",
    "llama-index-vector-stores-chroma",
    "markitdown",
    "ocrmypdf>=17.4.1",
    "peft",
    "sentence-transformers",
    "tokenizers",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "transformers",
    "trl",
]
